--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,23 +1,41 @@
+@import "fonts.scss";
+@import "reset";
+
 :root {
 	--bg-main-gradient: linear-gradient(0deg, rgba(15,18,59,1) 0%, rgba(9,13,46,1) 59%, rgba(2,5,21,1) 100%);
 	--space: 1rem;
 }
 
-* {
-	padding: 0;
-	margin: 0;
-	box-sizing: border-box;
-	list-style: none;
+body {
+  font-family: 'Roboto', sans-serif;
 }
 
-.px-10 {
-	padding-left: 10%;
-	padding-right: 10%;
+.form-hover {
+  &:focus {
+    box-shadow: 3px 3px 5px rgba(88, 44, 255, 0.62), -3px -3px 5px rgba(175, 154, 253, 0.41), -1px -1px 5px rgba(175, 154, 253, 0.41) inset, 1px 1px 5px rgba(88, 44, 255, 0.62) inset!important;
+  }
 }
 
-h1, h2, h3, h4 {
-	margin: 0;
+.button-hover {
+  transition: background-color 0.5s ease-in-out 0s;
+  &:hover {
+    background-color: rgb(65, 139, 250) !important;
+  }
 }
+
+.link-hover {
+  &:hover {
+    text-decoration: underline;
+  }
+}
+
+
+//.px-10 {
+//	padding-left: 10%;
+//	padding-right: 10%;
+//}
+
+
 
 .bg-main {
 	height: 100vh;
@@ -37,7 +55,7 @@ h1, h2, h3, h4 {
 	padding: 30px 25px 25px;
 	transform: translate(-50%);
 	border-radius: 20px;
-	box-shadow: 3px 1px 2px #C4C4C4, -3px -1px 2px #C4C4C4;
+	//box-shadow: 3px 1px 2px #C4C4C4, -3px -1px 2px #C4C4C4;
 	backdrop-filter: blur(42px);
 	& > h4 {
 		margin-bottom: 5px;
@@ -52,7 +70,6 @@ h1, h2, h3, h4 {
 			display: inline-block;
 			margin-bottom: 5px;
 			border-bottom: 1px solid transparent;
-			text-decoration: none;
 			text-transform: uppercase;
 			color: #fff;
 			transition: all 0.5s ease-in-out 0s;
