--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,8 +1,10 @@
 @import "fonts.scss";
 @import "reset";
+@import "main";
 
 :root {
 	--bg-main-gradient: linear-gradient(0deg, rgba(15,18,59,1) 0%, rgba(9,13,46,1) 59%, rgba(2,5,21,1) 100%);
+  --bg-grid-items-gradient: linear-gradient(0deg, rgba(26,31,55,0) 0%, rgba(6,11,38,0.94) 100%);
 	--warn-red: red;
   --success: green;
 }
@@ -53,6 +55,11 @@ body {
 	height: 100vh;
   overflow: hidden;
 	background: var(--bg-main-gradient);
+  &.image {
+    padding: 20px;
+    background-image: url("../assets/img/bg_main.png");
+    background-position: 30% 100%;
+  }
 }
 
 .header-nav {
