--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -7,6 +7,9 @@
   --bg-grid-items-gradient: linear-gradient(0deg, rgba(26,31,55,0) 0%, rgba(6,11,38,0.94) 100%);
 	--warn-red: red;
   --success: green;
+  --dark-blue: #1A1F37;
+  --white: #ffffff;
+  --main-blue: #0075FF;
 }
 
 body {
