--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,19 +1,60 @@
 $root: &;
 
+
+
 .aside-container {
   min-width: 20%;
   border-radius: 20px;
   padding: 20px;
   box-shadow: 2px 2px 20px rgb(72, 79, 114);
   background: var(--bg-grid-items-gradient);
-  
-  
 }
-.svg-container {
+.svg-aside {
   padding: 8px;
   border-radius: 8px;
   background: var(--dark-blue);
   box-shadow: 2px 2px 10px rgb(51, 57, 100);
+}
+
+.svg-navigation-main {
+  &:hover {
+    cursor: pointer;
+    #{$root} path.navigation-main-button {
+               fill: var(--white);
+             }
+  }
+}
+
+.log-out-item {
+  padding-bottom: 5px;
+  &:hover {
+    border-bottom: 1px solid white;
+    #{$root} svg.svg-navigation-main > g > path {
+      fill: var(--white);
+    }
+  }
+}
+
+.search-field {
+  position: relative;
+  & > svg {
+    position: absolute;
+    top: 5px;
+    right: 10px;
+    z-index: 2;
+    width: 24px;
+    height: 24px;
+    & > path {
+      fill: var(--white);
+      opacity: 0.5;
+    }
+  }
+  & > input {
+    &:focus {
+      box-shadow: -1px -1px 5px rgba(175, 154, 253, 0.41) inset, 
+        1px 1px 5px rgba(88, 44, 255, 0.62) inset!important;
+    }
+  }
 }
 
 .navigation-list {
@@ -28,7 +69,7 @@ $root: &;
       box-shadow: 2px 2px 10px rgb(72, 79, 114);
       background: var(--dark-blue);
       #{$root} path.svg-path {
-        fill: white;
+        fill: var(--white);
       }
       #{$root} .svg-container {
         background: var(--main-blue);
@@ -86,56 +127,56 @@ $root: &;
   
 }
 
-.div1 { 
-  grid-area: 1 / 1 / 2 / 3;
+.item1 { 
+  grid-area: 1 / 1 / 1 / 4;
   
 }
-.div2 { 
-  grid-area: 1 / 10 / 2 / 11;
+.item2 { 
+  grid-area: 1 / 10 / 1 / 11;
   
 }
-.div3 { 
-  grid-area: 1 / 11 / 2 / 13;
+.item3 { 
+  grid-area: 1 / 11 / 1 / 13;
 }
 
-.div4 { 
+.item4 { 
   grid-area: 2 / 1 / 3 / 4;
   border-radius: 12px;
 }
-.div5 { 
+.item5 { 
   grid-area: 2 / 4 / 3 / 7;
   border-radius: 12px;
 }
-.div6 { 
+.item6 { 
   grid-area: 2 / 7 / 3 / 10;
   border-radius: 12px;
 }
-.div7 { 
+.item7 { 
   grid-area: 2 / 10 / 3 / 13;
   border-radius: 12px;
 }
-.div8 { 
+.item8 { 
   grid-area: 3 / 1 / 5 / 6;
   background-image: url("../assets/img/jelfish.png");
   background-size: cover;
   background-position: 10% 30%;
   background-repeat: no-repeat;
 }
-.div9 { 
+.item9 { 
   grid-area: 3 / 6 / 5 / 9;
 }
-.div10 { 
+.item10 { 
   grid-area: 3 / 9 / 5 / 13;
 }
-.div11 { 
+.item11 { 
   grid-area: 5 / 1 / 7 / 8;
 }
-.div12 { 
+.item12 { 
   grid-area: 5 / 8 / 7 / 13;
 }
-.div13 { 
+.item13 { 
   grid-area: 7 / 1 / 11 / 9;
 }
-.div14 { 
+.item14 { 
   grid-area: 7 / 9 / 11 / 13;
 }
