--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -16,6 +16,10 @@ body {
   font-family: 'Roboto', sans-serif;
 }
 
+.hidden {
+  display: none;
+}
+
 .form-hover {
   &:focus {
     box-shadow: 3px 3px 5px rgba(88, 44, 255, 0.62), -3px -3px 5px rgba(175, 154, 253, 0.41), -1px -1px 5px rgba(175, 154, 253, 0.41) inset, 1px 1px 5px rgba(88, 44, 255, 0.62) inset!important;
