finished second grid line

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -119,6 +119,11 @@ $root: &;
   width: 80%;
 }
 
+.icon-container {
+  width: 50px;
+  height: auto;
+}
+
 .grid-item {
   border-radius: 20px;
   padding: 20px 20px;
