--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -1,4 +1,12 @@
 $spacers: 1rem;
+$table-bg: transparent;
+$table-border-color: #0075FF;
+$table-group-separator-color: #0075FF;
+$table-color: #fff;
+$card-bg: #011544;
+$card-color: #fff;
+$card-spacer-y: 1rem;
+$card-title-spacer-y: 1rem;
 
 $spacers: (
   0: 0,
