--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,9 +1,7 @@
 $root: &;
 
-
-
 .aside-container {
-  min-width: 20%;
+  min-width: 15%;
   border-radius: 20px;
   padding: 20px;
   box-shadow: 2px 2px 20px rgb(72, 79, 114);
@@ -116,7 +114,7 @@ $root: &;
 }
 
 .dashboard-container {
-  width: 80%;
+  width: 85%;
 }
 
 .icon-container {
@@ -125,6 +123,7 @@ $root: &;
 }
 
 .grid-item {
+  overflow: hidden;
   border-radius: 20px;
   padding: 20px 20px;
   box-shadow: 2px 2px 10px rgb(72, 79, 114);
@@ -174,14 +173,32 @@ $root: &;
   grid-area: 3 / 9 / 5 / 13;
 }
 .item11 { 
-  grid-area: 5 / 1 / 7 / 8;
+  grid-area: 5 / 1 / 11 / 9;
+  max-height: 500px;
+  
 }
 .item12 { 
-  grid-area: 5 / 8 / 7 / 13;
+  grid-area: 5 / 9 / 11 / 13;
+  max-height: 500px;
+  //overflow: auto;
 }
-.item13 { 
-  grid-area: 7 / 1 / 11 / 9;
+
+.scroll {
+  max-height: 500px;
+  overflow: auto;
 }
-.item14 { 
-  grid-area: 7 / 9 / 11 / 13;
+
+.card.card-item {
+  
+  width: 45%;
+  box-shadow: 2px 2px 10px rgb(72, 79, 114);
+  & > div > p {
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    height: 30px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: normal;
+  }
 }
