--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -14,6 +14,11 @@
 
 body {
   font-family: 'Roboto', sans-serif;
+  scrollbar-width: 0;
+}
+
+::-webkit-scrollbar {
+  display: none;
 }
 
 .hidden {
