--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -107,7 +107,7 @@ $root: &;
 .grid-container {
   display: grid;
   grid-template-columns: repeat(12, 1fr);
-  grid-template-rows: repeat(8, 1fr);
+  //grid-template-rows: repeat(8, 1fr);
   grid-column-gap: 20px;
   grid-row-gap: 20px;
   padding: 20px 0 0 20px;
@@ -144,7 +144,7 @@ $root: &;
 }
 
 .item4 { 
-  grid-area: 2 / 1 / 3 / 4;
+  grid-area: 2 / 1 / 2 / 4;
   border-radius: 12px;
 }
 .item5 { 
@@ -170,21 +170,22 @@ $root: &;
   grid-area: 3 / 6 / 5 / 9;
 }
 .item10 { 
-  grid-area: 3 / 9 / 5 / 13;
+  grid-area: 3 / 9 / 7 / 13;
 }
 .item11 { 
   grid-area: 5 / 1 / 11 / 9;
-  max-height: 500px;
+  
   
 }
 .item12 { 
-  grid-area: 5 / 9 / 11 / 13;
-  max-height: 500px;
-  //overflow: auto;
+  grid-area: 7 / 9 / 11 / 13;
+  
+  
 }
 
 .scroll {
-  max-height: 500px;
+  padding: 20px 0 70px 0;
+  height: 100%;
   overflow: auto;
 }
 
