added delete project function

--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -7,6 +7,7 @@ $card-bg: #011544;
 $card-color: #fff;
 $card-spacer-y: 1rem;
 $card-title-spacer-y: 1rem;
+$modal-content-color: #000;
 
 $spacers: (
   0: 0,
