--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -179,7 +179,8 @@ $root: &;
 }
 .item12 { 
   grid-area: 7 / 9 / 11 / 13;
-  
+  height: 400px;
+  min-height: 100%;
   
 }
 
@@ -201,5 +202,13 @@ $root: &;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: normal;
+  }
+}
+
+.table-row {
+  transition: background-color 0.5s ease-in-out 0s;
+  &:hover {
+    background-color: rgba(65, 72, 108, 0.74);
+    cursor: pointer;
   }
 }
