--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -190,6 +190,21 @@ $root: &;
   overflow: auto;
 }
 
+.actions {
+  width: 45px;
+  height: auto;
+  object-fit: cover;
+  transition: background-color 0.5s ease-in-out 0s;
+  & > img {
+    width: 100%;
+  }
+  &:hover {
+    background-color: var(--dark-blue);
+    box-shadow: 2px 2px 10px rgb(72, 79, 114);
+  }
+  
+}
+
 .card.card-item {
   
   width: 45%;
@@ -208,7 +223,7 @@ $root: &;
 .table-row {
   transition: background-color 0.5s ease-in-out 0s;
   &:hover {
-    background-color: rgba(65, 72, 108, 0.74);
+    background-color: rgba(56, 61, 100, 0.53);
     cursor: pointer;
   }
 }
