--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -204,9 +204,33 @@ $root: &;
   }
   
 }
-
+.table-title {
+  position: relative;
+  &:hover {
+    cursor: pointer;
+    color: #0075FF;
+    &:after {
+      opacity: 1;
+      top: 2rem;
+    }
+  }
+  &:after {
+    content: attr(data-tooltip);
+    position: absolute;
+    width: 100px;
+    left: 0; 
+    top: 0; 
+    z-index: 2;
+    background: var(--main-blue);
+    color: var(--white); 
+    padding: 0.5rem;
+    box-shadow: 2px 2px 10px rgb(72, 79, 114);
+    pointer-events: none;
+    opacity: 0; 
+    transition: 1.5s;
+  }
+}
 .card.card-item {
-  
   width: 45%;
   box-shadow: 2px 2px 10px rgb(72, 79, 114);
   & > div > p {
