--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -125,7 +125,7 @@ $root: &;
 .grid-item {
   overflow: hidden;
   border-radius: 20px;
-  padding: 20px 20px;
+  padding: 20px;
   box-shadow: 2px 2px 10px rgb(72, 79, 114);
   background: linear-gradient(0deg, rgba(9,13,46,0.74) 0%, rgba(6,11,40,0.71) 100%);
   
@@ -160,25 +160,25 @@ $root: &;
   border-radius: 12px;
 }
 .item8 { 
-  grid-area: 3 / 1 / 5 / 6;
+  grid-area: 3 / 1 / 7 / 6;
   background-image: url("../assets/img/jelfish.png");
   background-size: cover;
   background-position: 10% 30%;
   background-repeat: no-repeat;
 }
 .item9 { 
-  grid-area: 3 / 6 / 5 / 9;
+  grid-area: 3 / 6 / 7 / 9;
 }
 .item10 { 
-  grid-area: 3 / 9 / 7 / 13;
+  grid-area: 3 / 9 / 8 / 13;
 }
 .item11 { 
-  grid-area: 5 / 1 / 11 / 9;
+  grid-area: 7 / 1 / 11 / 9;
   
   
 }
 .item12 { 
-  grid-area: 7 / 9 / 11 / 13;
+  grid-area: 8 / 9 / 11 / 13;
   height: 400px;
   min-height: 100%;
   
