--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -46,6 +46,11 @@ body {
 
 .login-form {
   position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 20px;
+ 
 }
 
 .message-block {
@@ -86,7 +91,6 @@ body {
 	padding: 30px 25px 25px;
 	transform: translate(-50%);
 	border-radius: 20px;
-	//box-shadow: 3px 1px 2px #C4C4C4, -3px -1px 2px #C4C4C4;
 	backdrop-filter: blur(42px);
 	& > h4 {
 		margin-bottom: 5px;
