--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,6 +6,9 @@ $root: &;
   padding: 20px;
   box-shadow: 2px 2px 20px rgb(72, 79, 114);
   background: var(--bg-grid-items-gradient);
+  @media screen and (max-width: 1299px) {
+    display: none;
+  }
 }
 .svg-aside {
   padding: 8px;
@@ -23,8 +26,21 @@ $root: &;
   }
 }
 
+.nav-burger {
+  display: none;
+  @media screen and (max-width: 1299px) {
+    display: block;
+    border-radius: 8px;
+    box-shadow: var(--bg-shadow);
+  }
+}
+
 .log-out-item {
+  display: flex;
   padding-bottom: 5px;
+  @media screen and (max-width: 1299px) {
+    display: none;
+  }
   &:hover {
     border-bottom: 1px solid white;
     #{$root} svg.svg-navigation-main > g > path {
@@ -47,12 +63,20 @@ $root: &;
       opacity: 0.5;
     }
   }
+  
   & > input {
     &:focus {
       box-shadow: -1px -1px 5px rgba(175, 154, 253, 0.41) inset, 
         1px 1px 5px rgba(88, 44, 255, 0.62) inset!important;
     }
+    @media screen and (max-width: 768px) {
+      width: 100%;
+    }
   }
+  @media screen and (max-width: 768px) {
+    margin-bottom: 30px;
+  }
+  
 }
 
 .navigation-list {
@@ -110,10 +134,18 @@ $root: &;
   grid-column-gap: 20px;
   grid-row-gap: 20px;
   padding: 20px 0 0 20px;
+  @media screen and (max-width: 1299px) {
+    padding: 20px 0 0 0;
+  }
+  @media screen and (max-width: 768px) {
+    display: block;
+    margin-bottom: 30px;
+  }
 }
 
 .dashboard-container {
   width: 85%;
+
 }
 
 .icon-container {
@@ -127,7 +159,9 @@ $root: &;
   padding: 20px;
   box-shadow: 2px 2px 10px rgb(72, 79, 114);
   background: linear-gradient(0deg, rgba(9,13,46,0.74) 0%, rgba(6,11,40,0.71) 100%);
-  
+  @media screen and (max-width: 768px) {
+    margin-bottom: 20px;
+  }
 }
 
 .item1 { 
@@ -135,11 +169,17 @@ $root: &;
   
 }
 .item2 { 
-  grid-area: 1 / 10 / 1 / 11;
+  grid-area: 1 / 9 / 1 / 10;
   
 }
 .item3 { 
-  grid-area: 1 / 11 / 1 / 13;
+  grid-area: 1 / 10 / 1 / 13;
+  @media screen and (max-width: 1299px) {
+    padding-top: 0!important;
+  }
+  @media screen and (max-width: 768px) {
+    margin-bottom: 30px;
+  }
 }
 
 .item4 { 
@@ -180,7 +220,6 @@ $root: &;
   grid-area: 8 / 9 / 11 / 13;
   height: 400px;
   min-height: 100%;
-  
 }
 
 .scroll {
